syntax="proto3";//指定proto版本

package helloword; //指定包名

//定义Hello服务
service HelloWorld{
    //定义 sayHello 方法
    rpc SayHello(HelloRequest) returns (HelloResponse){}

    //定义LostOfReplies
    rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse){}
}

message HelloRequest{
    string name = 1;
}

message HelloResponse{
    string message = 1;
    repeated int32 number = 4;
}